--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
     <title>ElmaestroDCT</title>
 </head>
 <body>
+    <img src="imagenes/main1.png"/>
+    <img src="imagenes/main2.png"/>
+    <header1>
+    </header1>
     <header> 
     <div #header>
-        <a href="http://proyectos.html">Proyectos</a>
-        <a href="trayectoria.html">Trayectoria</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="proyectos.html" class="btn-flotante">Proyectos</a>
+        <a href="trayectoria.html" class="btn-flotante1">Trayectoria</a>
+        <a href="contacto.html" class="btn-flotante2">Contacto</a>
     </div>
     </header>
-    <footer>
+    <footer1>
     <div #footer>
-        <p>Derechos reservados del autor actualizado 3 de diciembre del 2024</p>
+        
     </div>
-    </footer>
+    </footer1>
    
 </body>
 </html>
