--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <title>ElmaestroDCT</title>
 </head>
 <body>
+<div class="imagen">
     <img src="imagenes/main1.png"/>
     <img src="imagenes/main2.png"/>
+</div>
     <header1>
     </header1>
     <header> 
-    <div #header>
+    <div id="header">
         <a href="proyectos.html" class="btn-flotante">Proyectos</a>
         <a href="trayectoria.html" class="btn-flotante1">Trayectoria</a>
         <a href="contacto.html" class="btn-flotante2">Contacto</a>
     </div>
     </header>
     <footer1>
-    <div #footer>
+    <div id="footer">
         
     </div>
     </footer1>
